# savant

./: .gitignore  LICENSE  MIGRATION_SUMMARY.md  README.md  pyproject.toml
examples/: basic_usage.py
savant/: __init__.py  app.py  cli.py  dspy_modules.py  solver.py
savant/templates/: index.html  login.html  register.html
savanty/: __init__.py  cli.py  dspy_modules.py  solver.py
savanty/templates/: index.html
tests/: test_cli.py  test_solver.py
