[tool.poetry]
name = "savant"
version = "0.1.0"
description = ""
authors = ["Dipankar Sarkar <me@dipankar.name>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
openai = "^1.40.6"
clorm = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
